# third-wheel

./: .gitignore  Cargo.toml  LICENSE  README.md  setup_and_validate_environment.sh  test_against_chrome.sh  test_against_curl.sh  test_against_firefox.sh
.github/workflows/: general.yml
ca/: README.md  generate_ca.sh
ca/simple_server/: server.py
examples/: har-capture.rs  hyper_proxy.rs  response_modification.rs  sign_cert_for_site.rs  trivial_mitm.rs
src/: certificates.rs  error.rs  http_proxy.rs  lib.rs  main.rs  proxy.rs
src/codecs/: body.rs  client_side.rs  http11.rs  hyper_codec.rs  mod.rs  server_side.rs
src/http_proxy/: mitm.rs  mod.rs
src/proxy/: mitm.rs  mod.rs
test/: find_cargo_root.sh  test_against_chrome.sh  test_against_curl.sh  test_against_firefox.sh  test_hyper_against_curl.sh  test_with_pathod.sh
test/browser_containers/chrome/: dockerfile
test/browser_containers/firefox/: dockerfile
test/pathod_docker/: dockerfile  pathology_tests.sh
testing_against_browsers/chrome/: dockerfile  test_against_chrome.py
testing_against_browsers/firefox/: dockerfile  test_against_firefox.py
tests/: test_against_chrome.sh  test_against_curl.sh
tests/integration/: harness.rs  main.rs  proxy_vs_nonproxy.rs  simple_proxying.rs
