[package]
name = "third-wheel"
version = "0.4.0"
authors = ["Chris Campbell <campbellC@user.noreply.github.com>"]
edition = "2018"
readme = "README.md"
categories = ["network-programming", "command-line-utilities"]
keywords = ["mitmproxy", "man-in-the-middle"]
description = "third-wheel is a TLS man-in-the-middle proxy written in rust, with the aim of being lightweight and fast. It is currently in alpha."
repository = "https://www.github.com/campbellC/third-wheel"
license = "MIT"

[dependencies]
openssl = "0.10.30"
httparse = "1.3.4"
bytes = "0.5.4"
http = "0.2.1"
futures = "0.3.5"
time = "0.1.42"
native-tls = "^0.2"
tokio-native-tls = "0.1.0"
log = "^0.4"
async-trait = "^0.1"
thiserror = "^1.0"
lazy_static = "^1.4"
simple_logger = "^1.11"

[dev-dependencies]
argh = "^0.1"
simple_logger = "^1.11"
har = "^0.5"
cookie = "^0.14"

[dependencies.tokio]
version = "0.2.21"
features = ["macros", "rt-threaded", "tcp", "io-util", "tcp", "dns", "time"]

[dependencies.tokio-util]
version = "0.3.1"
features = ["codec"]

[dependencies.hyper]
version = "^0.13.9"
features = ["stream"]
