[package]
name = "third-wheel"
version = "0.6.0"
authors = ["Chris Campbell <campbellC@user.noreply.github.com>"]
edition = "2018"
readme = "README.md"
categories = ["network-programming", "command-line-utilities"]
keywords = ["mitmproxy", "man-in-the-middle"]
description = "third-wheel is a TLS man-in-the-middle proxy written in rust, with the aim of being lightweight and fast. It is currently in alpha."
repository = "https://www.github.com/campbellC/third-wheel"
license = "MIT"

[dependencies]
openssl = "0.10.30"
httparse = "1.3.4"
bytes = "0.5.4"
http = "0.2.1"
futures = "0.3.5"
native-tls = "^0.2"
tokio-native-tls = "0.3.0"
log = "^0.4"
thiserror = "^1.0"
simple_logger = "^1.11"
tower = "^0.4"

[dependencies.tokio]
version = "^1.2"
features = ["macros", "rt-multi-thread", "io-util", "net", "time", "sync"]

[dependencies.tokio-util]
version = "^0.6"
features = ["codec"]

[dependencies.hyper]
version = "^0.14.3"
features = ["stream", "tcp", "client", "server", "http1"]

[dev-dependencies]
argh = "^0.1"
simple_logger = "^1.11"
har = "^0.5"
cookie = "^0.14"
run_script = "^0.6"
tokio-test = "^0.4"
# reqwest = "^0.11" 
reqwest = { git = "https://github.com/campbellC/reqwest"}
rand = "^0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies.warp]
version = "0.3"
features = ["tls"]

